[package]
name = "pcap2socks-gui"
version = "0.2.0"
authors = [ "Xie Zhihao <xzh1206@gmail.com>" ]
edition = "2018"
description = "A front-end interface for pcap2socks."
repository = "https://github.com/zhxie/pcap2socks-gui"
license = "MIT"
keywords = [ "proxy", "pcap", "socks" ]
categories = [ "network-programming" ]
default-run = "pcap2socks-gui"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
dns-lookup = "1.0.8"
dnsping = "0.2.0"
ipnetwork = "0.18.0"
ninat = "0.1.0"
pcap2socks = { git = "https://github.com/zhxie/pcap2socks" }
rand = "0.8.4"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
shadowsocks-service = { version = "1.11.2", default-features = false, features = [ "local", "stream-cipher" ] }
tauri = { version = "1.0.0-beta.5", features = [] }
tokio = { version = "1.9.0", default-features = false, features = [ "time", "macros" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
